fix overflow issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,4 @@
 .container {
   background-color: #fff;
   font-family: 'Noto Sans JP', sans-serif;
-  overflow: hidden;
 }
